@@ -143,9 +143,11 @@
         ((listp owner/repo)
          (values-list owner/repo))))
 
-(defun bind-repo (url-template repo)
-  (bind-plist url-template `(:owner ,(repo-owner repo)
-                             :name ,(repo-name repo))))
+(defun bind-repo (url-template owner/repo)
+  (multiple-value-bind (owner repo)
+      (coerce-owner-and-repo owner/repo)
+    (bind-plist url-template `(:owner ,owner
+                               :name ,repo))))
 
 (defun repo-public-clone-url (repo)
   (bind-repo "git://github.com/:owner/:name.git" repo))
@@ -271,7 +273,7 @@
     user))
 
 (defun user-github-home-url (user)
-  (bind-plist "http://github.com/:user" `(:user ,(user-login user))))
+  (bind-plist "http://github.com/:user" `(:user ,(coerce-user-name user))))
 
 
 ;;; ## Object API ##
@@ -377,15 +379,15 @@
 
 (defun gist-public-clone-url (gist)
   (bind-plist "git://gist.github.com/:id.git"
-              `(:id ,(gist-id gist))))
+              `(:id ,(coerce-gist-id gist))))
 
 (defun gist-private-clone-url (gist)
   (bind-plist "git@gist.github.com::id.git"
-              `(:id ,(gist-id gist))))
+              `(:id ,(coerce-gist-id gist))))
 
 (defun gist-embed-js-url (gist)
   (bind-plist "http://gist.github.com/:id.js"
-              `(:id ,(gist-id gist))))
+              `(:id ,(coerce-gist-id gist))))
 
 ;; Gist ID への変換
 (defun coerce-gist-id (id)
